--- a/planner-back-end/.prettierrc
+++ b/planner-back-end/.prettierrc
@@ -1,4 +1,10 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "useTabs": true,
+  "jsxSingleQuote": true,
+  "semi": false,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "arrowParens": "avoid",
+  "bracketSpacing": false
 }
